--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ jobs:
           npm install appium-xcuitest-driver
           npm install appium-uiautomator2-driver
           export APPIUM_HOME=/Users/runner/work/1/s/node_modules/appium
-          appium  driver install xcuites
+          appium  driver install xcuitest
           appium  driver install uiautomator2@2.4.5
           brew install carthage
           which appium
