--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ jobs:
           versionSpec: '20.x'
         displayName: 'Install Node.js'
       - script: |
-          npm install -g appium@2.11.2 --unsafe-perm=true --allow-root
+          npm install appium@2.11.2 --unsafe-perm=true --allow-root
           export APPIUM_HOME=/Users/runner/work/1/s/node_modules/appium
           appium  driver install xcuitest
           appium  driver install uiautomator2@2.4.5
