--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ jobs:
         displayName: 'Install Node.js'
       - script: |
           brew install appium
+          ls -lsa /usr/local/Cellar/
           appium  driver install xcuitest
           appium  driver install uiautomator2@2.4.5
           brew install libimobiledevice
@@ -30,7 +31,7 @@ jobs:
       - script: |
           brew install --cask android-commandlinetools
           export ANDROID_HOME=$HOME/Library/Android/sdk
-          export APPIUM_HOME=/Users/runner/work/1/s/node_modules/appium
+          export APPIUM_HOME=/usr/local/Cellar/appium
           export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
           export PATH=$ANDROID_HOME/emulator:$PATH
           export PATH=$ANDROID_HOME/platform-tools:$PATH
@@ -69,10 +70,10 @@ jobs:
           $ANDROID_HOME/platform-tools/adb uninstall io.appium.uiautomator2.server
           $ANDROID_HOME/platform-tools/adb uninstall io.appium.uiautomator2.server.test
           $ANDROID_HOME/platform-tools/adb uninstall io.appium.unlock
-          export APPIUM_HOME=/usr/local/bin/appium
+          export APPIUM_HOME=/usr/local/Cellar/appium
           appium  driver install xcuitest
           appium  driver install uiautomator2@2.4.5
-          /Applications/Katalon\ Studio\ Engine.app/Contents/MacOS/katalonc -noSplash -runMode=console  -retry=2 -projectPath="/Users/runner/work/1/s" -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/usr/local/bin/appium"
+          /Applications/Katalon\ Studio\ Engine.app/Contents/MacOS/katalonc -noSplash -runMode=console  -retry=2 -projectPath="/Users/runner/work/1/s" -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/usr/local/Cellar/"
         displayName: 'Start Test emulator'
         continueOnError: true
 
