--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ jobs:
           npm install  appium@2.11.2 --unsafe-perm=true --allow-root
           sudo ln -s /Users/runner/work/1/s/node_modules/appium/index.js /usr/local/bin/appium
           appium  driver install xcuitest
-          appium  driver install uiautomator2@2.4.5
+          appium  driver install uiautomator2
           brew install libimobiledevice
           brew install carthage
           which appium
