--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     
       - script: |
-          npm install  appium@2.11.2 --unsafe-perm=true --allow-root
+          npm install  appium@beta
           sudo ln -s /Users/runner/work/1/s/node_modules/appium/index.js /usr/local/bin/appium
           appium  driver install xcuitest
           appium  driver install uiautomator2
@@ -67,9 +67,7 @@ jobs:
           $ANDROID_HOME/platform-tools/adb uninstall io.appium.unlock
           export APPIUM_HOME=/Users/runner/work/1/s/node_modules/appium
           appium  driver install xcuitest
-          appium  driver install uiautomator2@2.4.5
-          adb kill-server
-          adb start-server
+          appium  driver install uiautomator2
           /Applications/Katalon\ Studio\ Engine.app/Contents/MacOS/katalonc -noSplash -runMode=console  -retry=2 -projectPath="/Users/runner/work/1/s" -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/Users/runner/work/1/s/node_modules/appium"
         displayName: 'Start Test emulator'
         continueOnError: true
