--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,10 +61,8 @@ jobs:
           cd Katalon_Studio_Engine_MacOS-9.6.0
           sudo mv "Katalon Studio Engine.app" /Applications/
           $ANDROID_HOME/platform-tools/adb devices
-          $ANDROID_HOME/platform-tools/adb uninstall io.appium.settings
-          $ANDROID_HOME/platform-tools/adb uninstall io.appium.uiautomator2.server
-          $ANDROID_HOME/platform-tools/adb uninstall io.appium.uiautomator2.server.test
-          $ANDROID_HOME/platform-tools/adb uninstall io.appium.unlock
+          $ANDROID_HOME/platform-tools/adb adb shell service list
+
           export APPIUM_HOME=/Users/runner/work/1/s/node_modules/appium
           appium  driver install xcuitest
           appium  driver install uiautomator2
