--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,6 +82,10 @@ jobs:
           export APPIUM_HOME=/Users/runner/work/1/s/node_modules/appium
           appium  driver install xcuitest
           appium  driver install uiautomator2
+          cd "/Users/runner/work/1/s/Data Files/"
+          npm install --location=global appcenter-cli   
+          appcenter login --token 0ebea8b2071497861dfb14635b22940f17455a6c 
+          appcenter distribute groups download --app BKTPAY/Epara-Android-Uat -g "Test Group"
           /Applications/Katalon\ Studio\ Engine.app/Contents/MacOS/katalonc -noSplash -runMode=console  -retry=0 -projectPath="/Users/runner/work/1/s" -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/Users/runner/work/1/s/node_modules/appium"
         displayName: 'Start Test emulator'
         continueOnError: true
