--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ jobs:
       - script: |
           $ANDROID_HOME/platform-tools/adb devices
           echo '---'
-          nohup $ANDROID_HOME/emulator/emulator -avd test_android_emulator  -wipe-data -no-snapshot -no-window -no-audio -no-boot-anim -camera-back none -camera-front none -gpu off -qemu -m 4096  > /dev/null 2>&1 & $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
+          # nohup $ANDROID_HOME/emulator/emulator -avd test_android_emulator  -wipe-data -no-snapshot -no-window -no-audio -no-boot-anim -camera-back none -camera-front none -gpu off -qemu -m 4096  > /dev/null 2>&1 & $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
           echo '---'
           $ANDROID_HOME/platform-tools/adb devices -l | grep emulator-5554
           $ANDROID_HOME/platform-tools/adb shell getprop
@@ -88,7 +88,7 @@ jobs:
           appcenter distribute groups download --app BKTPAY/Epara-Android-Uat -g "Test Group"
           $ANDROID_HOME/platform-tools/adb shell screenrecord --time-limit=120 /Users/runner/work/1/s/test.mp4 &
           #/Applications/Katalon\ Studio\ Engine.app/Contents/MacOS/katalonc -noSplash -runMode=console  -retry=0 -projectPath="/Users/runner/work/1/s" -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/Users/runner/work/1/s/node_modules/appium"
-          /Applications/Katalon\ Studio\ Engine.app/Contents/MacOS/katalonc -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Test_Suite_Web" -browserType="Chrome" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" -executionProfile=”default” 
+          /Applications/Katalon\ Studio\ Engine.app/Contents/MacOS/katalonc -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Test_Suite_Web" -projectPath="/Users/runner/work/1/s" -browserType="Chrome" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" -executionProfile=”default” 
         displayName: 'Start Test emulator'
         continueOnError: true
       - task: PublishPipelineArtifact@1
