--- a/azure-pipelines3.yml
+++ b/azure-pipelines3.yml
@@ -5,6 +5,7 @@ jobs:
   - job: ubuntu
     pool:
       vmImage: ubuntu-latest
+      name: BKTPAY UAT Agents
       
     steps:
       - task: katalonTask@1
