--- a/azure-pipelines-web.yml
+++ b/azure-pipelines-web.yml
@@ -6,8 +6,11 @@ jobs:
     pool:
       vmImage: ubuntu-latest
       name: BKTPAY UAT Agents
-      
+
     steps:
+      - task: CmdLine@2
+        inputs:
+          script: 'df -h'
       - task: katalonTask@1
         inputs:
           version: '9.6.0'
