--- a/azure-pipelines-web.yml
+++ b/azure-pipelines-web.yml
@@ -2,18 +2,16 @@ trigger:
   - master
 
 jobs:
-  - job: macOS
+  - job: ubuntu
     pool:
-      vmImage: macOS-latest
+      vmImage: ubuntu-latest
       name: BKTPAY UAT Agents
 
     steps:
        - script: |
-          curl -O https://download.katalon.com/9.6.0/Katalon_Studio_Engine_MacOS-9.6.0.tar.gz
-          tar -xzf Katalon_Studio_Engine_MacOS-9.6.0.tar.gz
-          cd Katalon_Studio_Engine_MacOS-9.6.0
-          sudo mv "Katalon Studio Engine.app" /Applications/
-          cd /Applications/Katalon\ Studio\ Engine.app/Contents/MacOS/
+          curl -O https://download.katalon.com/9.6.0/Katalon_Studio_Engine_Linux_64-9.6.0.tar.gz
+          tar -xzf Katalon_Studio_Engine_Linux_64-9.6.0.tar.gz
+          cd Katalon_Studio_Engine_Linux_64-9.6.0
+          ls
           chmod +x katalonc
           katalonc -noSplash -runMode=console -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Test_Suite_Web" -projectPath="/Users/runner/work/1/s" -browserType="Chrome" --config -webui.autoUpdateDrivers=true -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506"
-          ./katalonc -noSplash -runMode=console -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Test_Suite_Web" -projectPath="/Users/runner/work/1/s" -browserType="Chrome" --config -webui.autoUpdateDrivers=true -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506"
