--- a/azure-pipelines-web.yml
+++ b/azure-pipelines-web.yml
@@ -8,6 +8,12 @@ jobs:
       name: BKTPAY UAT Agents
 
     steps:
+    
+       - task: JavaToolInstaller@0
+         inputs:
+          versionSpec: '17'
+          jdkArchitectureOption: 'x64'
+          jdkSourceOption: 'PreInstalled'
        - script: |
           curl -O https://download.katalon.com/9.6.0/Katalon_Studio_Engine_Linux_64-9.6.0.tar.gz
           tar -xzf Katalon_Studio_Engine_Linux_64-9.6.0.tar.gz
