--- a/azure-pipelines-web.yml
+++ b/azure-pipelines-web.yml
@@ -11,6 +11,7 @@ jobs:
     
 
        - script: |
+          sudo apt-get update
           sudo apt install openjdk-17-jdk openjdk-17-jre
           curl -O https://download.katalon.com/9.6.0/Katalon_Studio_Engine_Linux_64-9.6.0.tar.gz
           tar -xzf Katalon_Studio_Engine_Linux_64-9.6.0.tar.gz
