--- a/azure-pipelines-web.yml
+++ b/azure-pipelines-web.yml
@@ -20,4 +20,4 @@ jobs:
           cd Katalon_Studio_Engine_Linux_64-9.6.0
           ls
           chmod +x katalonc
-          ./katalonc -noSplash -runMode=console  -retry=0  -testSuitePath="Test Suites/Test_Suite_Web" -browserType="Chrome" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/Users/runner/work/1/s/node_modules/appium"
+          ./katalonc -noSplash -runMode=console  -retry=0  -testSuitePath="Test Suites/Test_Suite_Web" -browserType="Chrome" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -logLevel=INFO
