--- a/azure-pipelines-web.yml
+++ b/azure-pipelines-web.yml
@@ -12,7 +12,7 @@ jobs:
        - script: |
           sudo apt-get update
           sudo apt install openjdk-8-jdk openjdk-8-jre
-          sar -r 0
+          free -m
        - task: katalonTask@1
          inputs:
             version: '9.6.0'
