--- a/azure-pipelines-web.yml
+++ b/azure-pipelines-web.yml
@@ -14,6 +14,7 @@ jobs:
     
        - script: |
           free -m
+          top
        - task: katalonTask@1
          inputs:
             version: '9.6.0'
