--- a/azure-pipelines-web.yml
+++ b/azure-pipelines-web.yml
@@ -25,6 +25,12 @@ jobs:
           chmod +x katalonc
           xvfb-run --server-args="-screen 0, 1024x768x24" ./katalonc -noSplash -runMode=console  -retry=0  -testSuitePath="Test Suites/Test_Suite_Web" -projectPath="/azp/_work/1/s" -browserType="Chrome (headless)" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -logLevel=INFO
          continueOnError: true  
+      - task: katalonTask@1
+         inputs:
+            version: '9.6.0'
+            executeArgs: '-noSplash -runMode=console  -retry=0  -testSuitePath="Test Suites/Test_Suite_Web"  -projectPath="/azp/_work/1/s" -browserType="Chrome" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -logLevel=INFO'
+            x11Display: ':1'
+            xvfbConfiguration: '-a -n 0 -s "-screen 0 1024x768x24"'  
 
        - task: PublishPipelineArtifact@1
          displayName: 'Publish Pipeline Artifact'
