--- a/azure-pipelines-web.yml
+++ b/azure-pipelines-web.yml
@@ -23,14 +23,11 @@ jobs:
           cd Katalon_Studio_Engine_Linux_64-9.6.0
           ls
           chmod +x katalonc
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb
+          sudo apt-get install -f
           xvfb-run --server-args="-screen 0, 1024x768x24" ./katalonc -noSplash -runMode=console  -retry=0  -testSuitePath="Test Suites/Test_Suite_Web" -projectPath="/azp/_work/1/s" -browserType="Chrome" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -logLevel=INFO
          continueOnError: true  
-       - task: katalonTask@1
-         inputs:
-            version: '9.6.0'
-            executeArgs: '-noSplash -runMode=console  -retry=0  -testSuitePath="Test Suites/Test_Suite_Web"  -projectPath="/azp/_work/1/s" -browserType="Chrome" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -logLevel=INFO'
-            x11Display: ':1'
-            xvfbConfiguration: '-a -n 0 -s "-screen 0 1024x768x24"'  
 
        - task: PublishPipelineArtifact@1
          displayName: 'Publish Pipeline Artifact'
